erDiagram
    INSTRUCTOR {
        string _id PK
        string instructorId
        string firstName
        string lastName
        string phone
        string email
        string preferredCommunication
        string street
        string city
        string state
        string zip
        date createdAt
        date updatedAt
    }

    "CLASS" {
        string _id PK
        string instructor FK
        string dayOfWeek
        string startTime
        string endTime
        string classType
        string className
        number payRate
        boolean isPublished
        date createdAt
        date updatedAt
    }

    PACKAGE {
        string _id PK
        string packageId
        string packageName
        string category
        mixed numberOfClasses
        string classType
        date startDate
        date endDate
        number price
        date createdAt
        date updatedAt
    }

    CUSTOMER {
        string _id PK
        string customerId
        string firstName
        string lastName
        string phone
        string email
        string preferredCommunication
        string street
        string city
        string state
        string zip
        number classBalance
        date createdAt
        date updatedAt
    }

    SALE {
        string _id PK
        string saleId
        string customer FK
        string package FK
        date paymentDate
        number amount
        string paymentMethod
        date validityStart
        date validityEnd
        number classesAwarded
        date createdAt
        date updatedAt
    }

    INSTRUCTOR ||--o{ "CLASS" : teaches
    CUSTOMER ||--o{ SALE : purchases
    PACKAGE ||--o{ SALE : "sold as"
